gitops/netflix/files/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: files-auth
  namespace: netflix
spec:
  basicAuth:
    secret: files-auth
