gitops/netflix/files/files.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: files
spec:
  selector:
    matchLabels:
      app: files
  template:
    metadata:
      labels:
        app: files
    spec:
      containers:
      - name: files
        image: docker.io/svenstaro/miniserve:0.35.0
        args:
          - "--enable-tar"
          - "--enable-tar-gz"
          - "--compress-response"
          - "--dirs-first"
          - "--hide-version-footer"
          - "--qrcode"
          - "--verbose"
          - "/tmp"
        readinessProbe:
          httpGet:
            path: /__miniserve_internal/healthcheck
            port: 8080
        livenessProbe:
          httpGet:
            path: /__miniserve_internal/healthcheck
            port: 8080
        volumeMounts:
        - name: media
          mountPath: /tmp/media
          readOnly: true
      volumes:
      - name: media
        persistentVolumeClaim:
            claimName: media-nfs
---
apiVersion: v1
kind: Service
metadata:
  name: files
spec:
  selector:
    app: files
  ports:
  - port: 8080
    targetPort: 8080
    name: web
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: files
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: netflix-files-auth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: files.dixneuf19.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: files
            port:
              name: web
  tls:
  - hosts:
    - files.dixneuf19.fr
    secretName: files-dixneuf19-fr-tls
